# FiCi

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
fici/: __init__.py  __main__.py  _parsing.py  bibtex.py  cli.py  extractor.py  models.py  pipeline.py  searcher.py  verifier.py
